Update examples to Java-GI 0.10.0